update benchmark data